manifests/base/CI-build-failure-prediction-inference/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-api-deployment
  labels:
    app: model-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-api
  template:
    metadata:
      labels:
        app: model-api
    spec:
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: model-api-container
          image: busybox # {"$imagepolicy": "production:model-api-policy"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
