manifests/base/CI-build-failure-prediction-inference/service.yml
apiVersion: v1
kind: Service
metadata:
  name: model-api-service
spec:
  selector:
    app: model-api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
